<resources>
    <string name="app_name">HW-4.1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="description"><b>Description</b></string>
    <string name="title"><b>Title</b></string>
    <string name="btn_save">SAVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>