<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/onBoardingFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.task.homework_4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_createNewTaskFragment"
            app:destination="@id/createNewTaskFragment"
            app:popUpTo="@id/navigation_home" />
        <argument
            android:name="task"
            android:defaultValue="@null"
            app:argType="com.task.homework_4.ui.models.Task"
            app:nullable="true" />
    </fragment>


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.task.homework_4.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.task.homework_4.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/createNewTaskFragment"
        android:name="com.task.homework_4.ui.home.createNewTask.CreateNewTaskFragment"
        android:label="Task"
        tools:layout="@layout/fragment_create_new_task">
        <action
            android:id="@+id/action_createNewTaskFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.task.homework_4.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.task.homework_4.ui.onBoarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding">
        <action
            android:id="@+id/action_onBoardingFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>